--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,82 @@ img {
   width: 100%;
   height: auto;
 }
+@media screen and (min-width: 768px) {
+  img {
+    width: 35%;
+    height: auto;
+  }
+  h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 4rem;
+  }
+  h4 {
+    font-size: 2rem;
+  }
+  strong,
+  p {
+    font-size: 40px;
+  }
+  p.episode {
+    font-size: 32px !important;
+  }
+  h5,
+  h5.name-episode {
+    font-size: 32px !important;
+  }
+  .info-page-text {
+    font-size: 32px !important;
+  }
+  .btn {
+    font-size: 60px !important;
+    background-size: 100% 5px !important;
+  }
+  .charge {
+    font-size: 80px;
+  }
+  .lds-dual-ring {
+    width: 120px !important;
+    height: 120px !important;
+  }
+  .lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 114px !important;
+    height: 114px !important;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+  }
+  input,
+  .lupa,
+  #close-form {
+    width: 500px !important;
+    font-size: 60px !important;
+  }
+  .title-modal {
+    font-size: 100px !important;
+  }
+  .close {
+    font-size: 100px !important;
+  }
+  .modal-content {
+    width: 25% !important;
+    height: auto;
+  }
+  .img-modal {
+    width: 100%;
+    height: 50%;
+  }
+  .space {
+    height: 450px !important;
+  }
+  #episode {
+    cursor: pointer;
+  }
+}
 h1 {
   padding: 0;
   margin: 0;
@@ -52,6 +128,12 @@ hr {
 }
 .container {
   padding: 2rem;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 5rem 10rem 0 10rem;
+  }
 }
 .badge {
   background: #1279e2;
@@ -101,6 +183,11 @@ hr {
 .btn-start {
   font-size: 30px;
 }
+@media screen and (min-width: 768px) {
+  .btn-start {
+    font-size: 150px !important;
+  }
+}
 .btn:hover {
   color: var(--color_alternative);
 }
@@ -109,20 +196,35 @@ hr {
   background-color: var(--color_secondary);
   margin-top: 2rem;
 }
+@media screen and (min-width: 768px) {
+  main#content article {
+    flex-basis: calc(25% - 3rem);
+  }
+  main#content {
+    justify-content: space-between;
+  }
+  .card {
+    border-radius: 10px;
+    background-color: var(--color_secondary);
+    margin-top: 2rem;
+    width: 33.3%;
+  }
+}
 .img-card {
   border-radius: 10px 10px 0 0;
   max-width: 100%;
   max-height: 100%;
 }
-@media (min-width: 768px) and (max-width: 2000px) {
+@media screen and (min-width: 480px) {
   .img-card {
     border-radius: 10px 10px 0 0;
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
   }
 }
 .information {
-  padding: 5px 2rem;
+  padding: 2rem 2rem;
+  text-align: left;
 }
 .stast-life {
   height: 8px;
@@ -130,6 +232,12 @@ hr {
   border-radius: 100%;
   display: inline-block;
   margin-right: 5px;
+}
+@media screen and (min-width: 480px) {
+  .stast-life {
+    height: 20px;
+    width: 20px;
+  }
 }
 .alive {
   background-color: var(--color_primary);
